--- a/DevOps/Services/nginx.conf
+++ b/DevOps/Services/nginx.conf
@@ -2,12 +2,14 @@ server {
     server_name sdistoreapi.ddns.net;
 
     location / {
-        proxy_pass http://localhost:5066;
+        proxy_pass http://localhost:5000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection keep-alive;
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     listen 443 ssl; # managed by Certbot
