--- a/DevOps/Services/storeapi.service.conf
+++ b/DevOps/Services/storeapi.service.conf
@@ -3,12 +3,12 @@ Description=StoreAPI .NET Web API
 After=network.target
 
 [Service]
-WorkingDirectory=/home/davidcristian/git/lab-5x-davidcristian/StoreAPI/StoreAPI
-ExecStart=/usr/bin/dotnet run --configuration Release --urls http://localhost:5066
+WorkingDirectory=/home/ubuntu/git/$REPO/StoreAPI/StoreAPI
+ExecStart=/usr/bin/dotnet run --configuration Release --urls http://localhost:5000
 Restart=always
 RestartSec=10
 SyslogIdentifier=storeapi
-User=davidcristian
+User=ubuntu
 Environment=ASPNETCORE_ENVIRONMENT=Production
 Environment=DOTNET_CLI_TELEMETRY_OPTOUT=true
 
