--- a/DevOps/Docker/docker-compose.yaml
+++ b/DevOps/Docker/docker-compose.yaml
@@ -10,9 +10,6 @@ services:
       - 5000:5000
     networks:
       - storenetwork
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Production
-      - ASPNETCORE_URLS=http://*:5000
     depends_on:
       - storedb
 
@@ -27,6 +24,8 @@ services:
       - storenetwork
     volumes:
       - /var/opt/mssql:/var/opt/mssql
+    environment:
+      - SA_PASSWORD=your_password # set your password here
 
 networks:
   storenetwork:
